syntax = "proto3";
package planet.blog;

import "gogoproto/gogo.proto";
import "planet/blog/params.proto";
import "planet/blog/post.proto";
import "planet/blog/sent_post.proto";
import "planet/blog/timedout_post.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "planet/x/blog/types";

// GenesisState defines the blog module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
  repeated Post postList = 3 [(gogoproto.nullable) = false];
  uint64 postCount = 4;
  repeated SentPost sentPostList = 5 [(gogoproto.nullable) = false];
  uint64 sentPostCount = 6;
  repeated TimedoutPost timedoutPostList = 7 [(gogoproto.nullable) = false];
  uint64 timedoutPostCount = 8;
  // this line is used by starport scaffolding # genesis/proto/state
}
